Improve JPA Provider portability - RSQL
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>